# timeline

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/timeline/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  constant.dart  main.dart  native.dart  production.dart  quality.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: RCa18436  Runner.rc  main.cpp
