[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
ascii_converter = "0.3.0"
odbc-api = "0.55.0"
rust_decimal = "1.29.1"

flutter_rust_bridge = "1"